--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -22,6 +21,7 @@
   </style>
   <style>
     .canvas_wrapper {
+      background: #075498;
       width: 100%;
       height: 100%;
       position: relative;
@@ -30,8 +30,10 @@
       transition: 10s all;
       transition: 20s all, 10s width, 10s height;
       border-radius: 50%;
-      border: 1px solid #ccc;
       position: absolute;
+      background: url(./images/pop.png);
+      background-size: cover;
+      -webkit-background-size: cover;
     }
   </style>
 </head>
