修改项目路径

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <div class="jsCircleWrapper"></div>
 
 
-<script src="./Circle.js"></script>
+<script src="./js/Circle.js"></script>
 <script>
   window.onload = function () {
     var animationCanvas = new Circle({
